# pdf_to_png_converter_mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: release.md
.claude/commands/: release.md
.github/workflows/: ci.yml  publish.yml
skills/paper-downloader/: SKILL.md
skills/paper-search/: SKILL.md
skills/pdf-converter/: SKILL.md
src/pdf_to_png_converter_mcp/: __init__.py  converter.py  downloader.py  gui.py  server.py
tests/: __init__.py  conftest.py  test_converter.py  test_downloader.py  test_server.py
