# -*- coding: utf-8 -*-
[project]
name = "pdf-to-png-converter-mcp"
version = "0.1.3"
description = "MCP server for converting PDF files to PNG images with paper download capabilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LostSunset" }
]
keywords = ["mcp", "pdf", "png", "converter", "paper", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pdf2image>=1.17.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
gui = [
    "PySide6>=6.8.0",
]

[project.urls]
Homepage = "https://github.com/LostSunset/pdf_to_png_converter_mcp"
Repository = "https://github.com/LostSunset/pdf_to_png_converter_mcp"
Issues = "https://github.com/LostSunset/pdf_to_png_converter_mcp/issues"

[project.scripts]
pdf-to-png-mcp = "pdf_to_png_converter_mcp.server:main"
pdf-to-png-gui = "pdf_to_png_converter_mcp.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_to_png_converter_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG005", # unused lambda argument
    "SIM105", # contextlib.suppress - sometimes try/except is clearer
    "SIM108", # ternary operator - sometimes if/else is clearer
]
exclude = [
    ".venv*",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint.isort]
known-first-party = ["pdf_to_png_converter_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/pdf_to_png_converter_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
